java level 8 for tests